--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -16,6 +16,11 @@ jobs:
           df -h 
           cat /etc/os-release
 
+      - uses: conda-incubator/setup-miniconda@v3
+        with:
+          auto-update-conda: true
+          python-version: "3.11"
+
       - name: run
         run: |
           bash test.sh
