--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -18,8 +18,9 @@ jobs:
 
       - uses: conda-incubator/setup-miniconda@v3
         with:
-          auto-update-conda: true
           python-version: "3.11"
+          auto-activate-base: true
+          activate-environment: ""
 
       - name: run
         run: |
